# docu-query

./: docker-compose.yml  prometheus.yml
apps/ingestion-service/: pyproject.toml  test_upload.py
apps/ingestion-service/src/: config.py  ingest.py  init_db.py  main.py  models.py  scheduler.py  worker.py
