[project]
name = "ingestion-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Gautam Tayal",email = "gautamtayal65@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "datetime (>=5.5,<6.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.401"

